custom-resource-consumers/takeout/apps/personal/nextcloud-iscsi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-iscsi
  namespace: personal
spec:
  selector:
    matchLabels:
      app: nextcloud-iscsi
  replicas: 1 # active iscsi
  template:
    metadata:
      labels:
        app: nextcloud-iscsi
    spec:
      containers:
      - name: nextcloud-iscsi
        image: nextcloud:21.0.8
        imagePullPolicy: Always
        # command: ["tail","-f","/dev/null"]
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
          - mountPath: "/var/www/html"
            name: nextcloud-iscsi-data
        resources:
          requests:
            cpu: 100m
          limits:
            memory: 3Gi
      volumes:
        - name: nextcloud-iscsi-data
          persistentVolumeClaim:
            claimName: nextcloud-iscsi-data-nas
      imagePullSecrets:
        - name: docker-hub
      # nodeSelector:
      #   kubernetes.io/hostname: weatherman
