custom-resource-consumers/takeout/apps/personal/nextcloud-iscsi/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-iscsi-db
  namespace: personal
  annotations: {}
  labels:
    app: nextcloud-iscsi-db
spec:
  replicas: 0 # active longhorn-database
  selector:
    matchLabels:
      app: nextcloud-iscsi-db
  serviceName: nextcloud-iscsi-db
  template:
    metadata:
      annotations: {}
      labels:
        app: nextcloud-iscsi-db
    spec:
      containers:
        - name: nextcloud-iscsi-db
          image: mariadb:10.5
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
              name: sql
              protocol: TCP
          volumeMounts:
            - name: nextcloud-iscsi-db
              mountPath: /var/lib/mysql
            - name: nextcloud-iscsi-extra-configs
              mountPath: /etc/mysql/conf.d
          resources:
            requests:
              cpu: 10m
            limits:
              memory: 1Gi
      nodeSelector:
        longhorn: primary
      imagePullSecrets:
        - name: docker-hub
      volumes:
        - name: nextcloud-iscsi-db
          persistentVolumeClaim:
            claimName: nextcloud-iscsi-mariadb-longhorn-database
        - name: nextcloud-iscsi-extra-configs
          configMap:
            name: nextcloud-iscsi-db-config
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-iscsi-cache
  namespace: personal
  annotations: {}
  labels:
    app: nextcloud-iscsi-cache
spec:
  replicas: 1 # active longhorn
  selector:
    matchLabels:
      app: nextcloud-iscsi-cache
  serviceName: nextcloud-iscsi-cache
  template:
    metadata:
      annotations: {}
      labels:
        app: nextcloud-cache
    spec:
      containers:
        - name: nextcloud-iscsi-cache
          image: redis:6.2
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          volumeMounts:
            - name: nextcloud-iscsi-cache
              mountPath: /data
          resources:
            requests:
              cpu: 10m
            limits:
              memory: 32Mi
      # nodeSelector:
      #   node.longhorn.io/create-default-disk: "true"
      imagePullSecrets:
        - name: docker-hub
      volumes:
        - name: nextcloud-iscsi-cache
          emptyDir: {}
