custom-resource-consumers/takeout/apps/personal/nextcloud-iscsi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-iscsi
  namespace: personal
spec:
  type: NodePort
  selector:
    app: nextcloud-iscsi
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-iscsi-db
  namespace: personal
spec:
  type: NodePort
  selector:
    app: nextcloud-iscsi-db
  ports:
    - name: tcp-mariadb
      protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-iscsi-cache
  namespace: personal
spec:
  type: ClusterIP
  selector:
    app: nextcloud-iscsi-cache
  ports:
    - name: tcp-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
